Fixed scrolling issues on mobile devices

--- a/src/Card.css
+++ b/src/Card.css
@@ -7,9 +7,9 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.7s cubic-bezier(.25, .8, .25, 1);
     /* To center the text */
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     /* To remove default button styles */
     outline: 0;
     border: none;
@@ -17,11 +17,11 @@
     font-family: 'Open Sans', sans-serif;
     border-radius: 0;
 }
-
+/* 
 .Card:hover {
     transform: scale(1.05);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
+} */
 
 .Card-title {
     user-select: none;
