--- a/src/Extras.css
+++ b/src/Extras.css
@@ -23,7 +23,7 @@
 }
 
 .Skill-group ul, .Interests-group ul {
-    padding-left: 15px;
+    /* padding-left: 15px; */
 }
 
 #Acknowledgements a {
