--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 /* Dark mode */
 
 @media screen and (prefers-color-scheme: dark) {
-     :root {
+    :root {
         --background-color: #333333;
         --foreground-color: white;
         --alt-color: #555555;
@@ -21,13 +21,13 @@
 /* Screen sizes */
 
 @media (max-width: 1100px) {
-     :root {
+    :root {
         --page-width: 768px;
     }
 }
 
 @media (max-width: 800px) {
-     :root {
+    :root {
         --page-width: 600px;
     }
     header {
@@ -36,20 +36,23 @@
 }
 
 @media (max-width: 700px) {
-     :root {
+    :root {
         --page-width: 500px;
     }
     #Extras {
         grid-template-columns: 100% !important;
     }
+    header {
+        grid-template-columns: 100% !important;
+    }
+    .App {
+        padding: 2rem !important;
+    }
 }
 
 @media (max-width: 600px) {
-     :root {
-        --page-width: 90%;
-    }
-    header {
-        grid-template-columns: 100% !important;
+    :root {
+        --page-width: 85%;
     }
 }
 
